[add] assignment -> page, css

--- a/pages/admin.html
+++ b/pages/admin.html
@@ -12,26 +12,24 @@
     
     <!--導覽 nav-->
     <nav class="nav flex-column bg-light">
-      <a class="nav-link link-dark" aria-current="page" href="#"><img src="../assets/images/logo-ANSWER.svg"/></a>
-      <a class="nav-link link-dark" href="#"><span class="material-icons me-3">assessment</span>Dashboard</a>
-      <a class="nav-link link-dark" href="#"><span class="material-icons me-3">question_answer</span>Question</a>
-      <a class="nav-link link-dark" href="assignment.html"><span class="material-icons me-3">assignment</span>Assignment</a>
-      <a class="nav-link link-dark" href="#"><span class="material-icons me-3">video_library</span>Course</a>
-      <a class="nav-link link-success" href="admin.html"><span class="material-icons me-3">supervisor_account</span>Admin</a>
-      <a class="nav-link link-dark" href="#"><span class="material-icons me-3">settings</span>Setting</a>
+      <a class="nav-link link-dar fw-boldk" aria-current="page" href="#"><img src="../assets/images/logo-ANSWER.svg"/></a>
+      <a class="nav-link link-dark fw-bold" href="#"><span class="material-icons me-3">assessment</span>Dashboard</a>
+      <a class="nav-link link-dark fw-bold" href="#"><span class="material-icons me-3">question_answer</span>Question</a>
+      <a class="nav-link link-dark fw-bold" href="assignment.html"><span class="material-icons me-3">assignment</span>Assignment</a>
+      <a class="nav-link link-dark fw-bold" href="#"><span class="material-icons me-3">video_library</span>Course</a>
+      <a class="nav-link link-success fw-bold" href="admin.html"><span class="material-icons me-3">supervisor_account</span>Admin</a>
+      <a class="nav-link link-dark fw-bold" href="#"><span class="material-icons me-3">settings</span>Setting</a>
   </nav>
 
     <!-- 主畫面 -->
     <main class="main">
       <div class="container" style="padding-left:32px;padding-top:32px;padding-right:32px;">
         <div class="row">
-
           <div class="d-flex p-2 bd-highlight justify-content-between">
             <div class="">
               <span class="fs-4 pe-5">Admin</span>
               <a href="#" data-bs-toggle="modal" data-bs-target="#AddModal" class="text-decoration-none link-dark fs-6">
-                <span class="material-icons link-success fs-6">add</span>
-              Add New Admin</a>
+                <span class="material-icons link-success fs-6">add</span>Add New Admin</a>
             </div>
             <div>
               <a href="#" class="text-decoration-none link-dark me-4"><span class="material-icons">search</span>
@@ -276,14 +274,7 @@
                   </div>
               </div>
             </div>
-
           </div>
-
-
-
-
-
-
       </div>
 
       <!-- <div class="modal-footer">
