--- a/assignment_reply.html
+++ b/assignment_reply.html
@@ -52,8 +52,7 @@
 
           <div class="d-flex">
             <span class="text-muted text-secondary">All(4)</span>
-           <span class="material-icons text-success">expand_more</span>
-            
+            <span class="material-icons text-success">expand_more</span>
           </div>
               <div class="d-flex gap-2 ">
                 <div class="col-12 col-md-4">
@@ -115,8 +114,6 @@
                           </div>
                         </div>
                         <div class="card-body">
-
-                          <!---->
                           <div class="d-flex">
                             <div class="flex-shrink-0">
                               <img src="/2023week5/assets/emilywang-cc5a821b.jpeg" class="rounded-circle" alt="..." style="width:40px;height:40px;">
@@ -131,31 +128,11 @@
                               <hr>
                             </div>
                           </div>
-        
-                          <!---->
-                          <div class="d-flex">
-                            <div class="flex-shrink-0">
-                              <img src="/2023week5/assets/andychen-f14fef59.jpeg" class="rounded-circle" alt="..." style="width:40px;height:40px;">
-                            </div>
-                            <div class="flex-grow-1 ms-3">
-                              <div class="mb-3">
-                                <h6 class="fw-bold fs-6">Andy Chen (You)</h6>
-                                <small class="text-muted text-secondary">10:38 AM (4 hours ago)</small>
-                              </div>
-                                <p>Hi David, by default, an image is rendered inline, like a letter so it sits on the same line that a, b, c and d sit on. There is space below that line for the descenders you find on letters like g, j, p and q.</p> 
-                                <p>You can:</p>
-                                <ul>
-                                  <li>adjust the <code class="text-success bg-light px-1 rounded-1 font-mono">vertical-align</code> of the image to position it elsewhere (e.g. the <code class="text-success bg-light px-1 rounded-1 font-mono">middle</code> ) or </li>
-                                  <li>change the <code class="text-success bg-light px-1 rounded-1 font-mono">display</code> so it isn’t inline.</li>
-                                </ul>
-                                <hr>
-                            </div>
-                          </div>
+                          <div id="editor" class="editor">This is some sample content.</div>
                           <div class="d-flex justify-content-end mt-2">
-                            <button type="button" class="btn btn-outline-success me-3">Mark as read</button>
-                            <a href="./assignment_reply.html" class="btn btn-success">Reply</a>
+                            <a href="./assignment.html" class="btn btn-outline-success me-3">Cancel</a>
+                            <button type="button" class="btn btn-success">Reply</button>
                           </div>
-                          <!---->
                         </div>
                       </div>
                     </div>
