[update] admin -> index & nav link

--- a/pages/index.html
+++ b/pages/index.html
@@ -15,9 +15,9 @@
       <a class="nav-link link-dar fw-boldk" aria-current="page" href="#"><img src="../assets/images/logo-ANSWER.svg"/></a>
       <a class="nav-link link-dark fw-bold" href="#"><span class="material-icons me-3">assessment</span>Dashboard</a>
       <a class="nav-link link-dark fw-bold" href="#"><span class="material-icons me-3">question_answer</span>Question</a>
-      <a class="nav-link link-dark fw-bold" href="assignment.html"><span class="material-icons me-3">assignment</span>Assignment</a>
+      <a class="nav-link link-dark fw-bold" href="./assignment.html"><span class="material-icons me-3">assignment</span>Assignment</a>
       <a class="nav-link link-dark fw-bold" href="#"><span class="material-icons me-3">video_library</span>Course</a>
-      <a class="nav-link link-success fw-bold" href="admin.html"><span class="material-icons me-3">supervisor_account</span>Admin</a>
+      <a class="nav-link link-success fw-bold" href="./index.html"><span class="material-icons me-3">supervisor_account</span>Admin</a>
       <a class="nav-link link-dark fw-bold" href="#"><span class="material-icons me-3">settings</span>Setting</a>
   </nav>
 
