--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     </main>
 
  <!-- Start of Add-Modal --> 
- <div class="modal fade" id="AddModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="EditModalLabel" aria-hidden="true">
+ <div class="modal fade" id="AddModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="AddModalLabel" aria-hidden="true">
       <div class="modal-dialog modal-dialog-scrollable">
         <div class="modal-content">
           <div class="modal-header">
@@ -284,8 +284,8 @@
   </div>
 </div>
 <!-- End of View-Modal --> 
-
-    <!-- Start of Edit-Modal --> 
+   
+<!-- Start of Edit-Modal --> 
     <div class="modal fade" id="EditModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="EditModalLabel" aria-hidden="true">
       <div class="modal-dialog modal-dialog-scrollable">
         <div class="modal-content">
@@ -355,7 +355,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> 
     <!-- End of Edit-Modal --> 
 
     <!--
