--- a/pages/index.html
+++ b/pages/index.html
@@ -35,6 +35,7 @@
               <a href="#" class="text-decoration-none link-dark me-4"><span class="material-icons">search</span>
               <a href="#" class="text-decoration-none link-dark"><span class="material-icons">notifications_active</span></a>
             </div>
+            <!-- Button trigger modal -->
           </div>
 
           <div class="col-12 col-md-12">
@@ -146,7 +147,7 @@
                   <td>Yes</td>
                   <td>
                     <a class="text-decoration-none link-dark  me-4" href="#" data-bs-toggle="modal" data-bs-target="#ViewModal" alt="view" title="view"><span class="material-icons">visibility</span></a>
-                    <a class="text-decoration-none link-dark" href="#" data-bs-toggle="modal" data-bs-target="#EditModal" alt="edit" title="edit"><span class="material-icons">edit</span></a>
+                    <a class="text-decoration-none link-dark" href="#" data-bs-toggle="modal" data-bs-target="#AbcModal" alt="edit" title="edit"><span class="material-icons">edit</span></a>
                   </td>
                 </tr>
               </tbody>
@@ -166,7 +167,7 @@
     </main>
 
  <!-- Start of Add-Modal --> 
- <div class="modal fade" id="AddModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="EditModalLabel" aria-hidden="true">
+ <div class="modal fade" id="AddModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="AddModalLabel" aria-hidden="true">
       <div class="modal-dialog modal-dialog-scrollable">
         <div class="modal-content">
           <div class="modal-header">
@@ -276,15 +277,14 @@
             </div>
           </div>
       </div>
-
-      <!-- <div class="modal-footer">
-      </div> -->
+      <!-- <div class="modal-footer"></div> -->
     </div>
   </div>
 </div>
+</div>
 <!-- End of View-Modal --> 
 
-    <!-- Start of Edit-Modal --> 
+<!-- Start of Edit-Modal --> 
     <div class="modal fade" id="EditModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="EditModalLabel" aria-hidden="true">
       <div class="modal-dialog modal-dialog-scrollable">
         <div class="modal-content">
@@ -318,28 +318,28 @@
                 <option value="1" selected="1">Admin</option>
               </select>
             </div>
-    
+  
             <div class="mb-3">
               <label for="FormControlInput" class="form-label fs-5 fs-bold">Custom Access</label>
               <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                <label class="form-check-label" for="flexCheckDefault">Lecture</label>
+                <input class="form-check-input" type="checkbox" value="" id="EditFormCheckLecture">
+                <label class="form-check-label" for="EditFormCheckLecture">Lecture</label>
               </div>
               <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                <label class="form-check-label" for="flexCheckDefault">Coupon</label>
+                <input class="form-check-input" type="checkbox" value="" id="EditFormCheckCoupon">
+                <label class="form-check-label" for="EditFormCheckCoupon">Coupon</label>
               </div>
               <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                <label class="form-check-label" for="flexCheckDefault">Message</label>
+                <input class="form-check-input" type="checkbox" value="" id="EditFormCheckMessage">
+                <label class="form-check-label" for="EditFormCheckMessage">Message</label>
               </div>
               <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                <label class="form-check-label" for="flexCheckDefault">Setting</label>
+                <input class="form-check-input" type="checkbox" value="" id="EditFormCheckSetting">
+                <label class="form-check-label" for="EditFormCheckSetting">Setting</label>
               </div>
               <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                <label class="form-check-label" for="flexCheckDefault">Task Menu</label>
+                <input class="form-check-input" type="checkbox" value="" id="EditFormCheckTaskMenu">
+                <label class="form-check-label" for="EditFormCheckTaskMenu">Task Menu</label>
               </div>
             </div>
             <div class="mb-3 d-grid gap-2">
@@ -354,7 +354,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> 
     <!-- End of Edit-Modal --> 
 
     <%- include('./layout/footer'); -%>
